# Multiprogramming

./: BEARandHONEY.md  CRASHCOURSE.md  EXAMH22.md  HUNGRYCHICKS.md  Multi-country.md  README.md  pom.xml  post@alema.no.txt
214Vault/: CSP.md  Inf214 Eksamen notat.md  javascript generators and iterators.md  monitors in AWAIT language.md  semantics of promises (Javascript).md  semaphores in AWAIT language.md  theoretical question.md
214VaultVersion1/: scheduling policies.md
DiningPhilosophers/: pom.xml
H25/Portfolios/Portfolio 1 - Solution/taskC/: CMakeLists.txt  a.out  alang.h  artists  artists.cpp  demo.cpp  roadMaintenance.cpp  taskC  testRoadMaint.cpp
H25/Portfolios/Portfolio 1 - Solution/taskC/taskC.dSYM/Contents/: Info.plist
H25/Portfolios/Portfolio 1 - Solution/taskC/taskC.dSYM/Contents/Resources/DWARF/: taskC
H25/Portfolios/Portfolio 1 - Solution/taskC/taskC.dSYM/Contents/Resources/Relocations/aarch64/: taskC.yml
SemaphoresInAWAITLanguage/: CRASHCOURSE.md  HUNGRYCHICKS.md
atomic_blocks_in_AWAIT_language/: exercises.md  solutions.md
event_loop/: exercises.md  solutions.md
exams/: ALLEXAMQUESTIONS.md  EXAMH21.md  EXAMH21Q.md  EXAMH22.md  EXAMH23.md  EXAMQUESTIONS.md  EXAMV24.md
monitors/: exercises.md  solutions.md
promise_graphs/: exercises.md  solutions.md
semantics_of_promise_graphs/: exercises.md  semantics_LaTeX.md  semantics_LaTeX_exercise.md  semantics_LaTeX_solution.md
semaphoresAWAITlanguage/: exercises.md
semaphores_in_AWAIT_language/: exercises.md  solutions.md
theory/: Promises.md  README (short).md  README.md  oldMain.md
(+80 files in other folders)
